--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
             </div>
         </div>
     </section>
+<script src="//code.tidio.co/utpwc0zyfszyo6fdqovfpkqgkqxwflua.js" async></script>
 </body>
 <script src="/js/bootstrap.min.js"></script>
 </html>
