--- a/index.html
+++ b/index.html
@@ -131,80 +131,19 @@
                     </p>
                 </div>
             </div>
-        </div>
-    </section>
-    <!-- Dog's World
-    <section class="p-5">
-        <div class="container">
-            <h1 class="text-center font-black fw-bold mt-5"><span><img class="color" src="https://img.icons8.com/ios-filled/50/1A1A1A/dog-footprint.png"/></span> Dog's World </h1>
-            <div class="d-lg-flex d-md-flex d-sm-block justify-content-evenly gap-4 mt-5 text-center">
-                <div class="card border shadow col-lg-3 col-sm mb-3">
-                    <img src="/img/browny.jpg" class="card-img-top" alt="...">
-                    <div class="card-body d-flex flex-column">
-                        <h3 class="card-title">Hi, I'm Browny!</h3>
-                        <p class="card-text text-start">Browny was born with a heredity condition that caused a deformity, and the man trying to sell him outside of a grocery store simply left him there when nobody wanted him. Luckily, a kind lady brought him to the shelter. </p>
-                        <a href="#" class="btn btn-outline-primary align-content-center fs-5 fw-semibold mt-auto">Adopt Me</a>
-                    </div>
+            <div class="d-md-flex d-sm-block mt-5">
+                <div class="col">
+                    <img class="image-fluid w-100 rounded shadow " src="/img/spay.jpg" alt="">
                 </div>
-                <div class="card border shadow col-lg-3 col-sm mb-3">
-                    <img src="/img/whitey.jpg" class="card-img-top" alt="...">
-                    <div class="card-body d-flex flex-column">
-                        <h3 class="card-title">Hi, I'm Whitey!</h3>
-                        <p class="card-text text-start">Whitey was stray dog before covered in fleas, his hair was almost completely gone and was full of crusty skin. The amazing people in Paw Project loved him back to health for two months before he was even put on the adoption floor.</p>
-                        <a href="#" class="btn btn-outline-primary align-content-center fs-5 fw-semibold mt-auto">Adopt Me</a>
-                    </div>
+                <div class="col mx-lg-5 mx-md-5 mx-sm-0">
+                    <p class="fw-bold fs-2 pt-md-0 pt-sm-4 text-primary">Spay & Neuter</p>
+                    <p class="fw-normal fs-4 ">
+                        One of Paw Project's objectives is to achieve a stray-free Philippines. We advocate for spaying and neutering.
+                    </p>
                 </div>
-                <div class="card border shadow col-lg-3 col-sm mb-3">
-                    <img src="/img/browny.jpg" class="card-img-top" alt="...">
-                    <div class="card-body d-flex flex-column">
-                        <h3 class="card-title">Hi, I'm Bruno!</h3>
-                        <p class="card-text text-start">Browny was born with a heredity condition that caused a deformity, and the man trying to sell him outside of a grocery store simply left him there when nobody wanted him. Luckily, a kind lady brought him to the shelter. </p>
-                        <a href="#" class="btn btn-outline-primary align-content-center fs-5 fw-semibold mt-auto">Adopt Me</a>
-                    </div>
-                </div>
-            </div>
-            <div class="mt-3 text-center">
-                <a class="fs-4 text-decoration-none" href="adopt.html">Show more <i class="bi bi-arrow-right-circle "></i>
-                </a>
             </div>
         </div>
     </section>
-    Cat's World
-    <section class="p-5">
-        <div class="container">
-            <h1 class="text-center font-black fw-bold"><span><img src="https://img.icons8.com/ios-filled/50/000000/cat-footprint.png"/></span> Cat's World </h1>
-            <div class="d-lg-flex d-md-flex d-sm-block justify-content-evenly gap-4 mt-5 text-center">
-                <div class="card border shadow col-lg-3 col-sm mb-3">
-                    <img src="/img/snow.jpg" class="card-img-top" alt="...">
-                    <div class="card-body d-flex flex-column">
-                        <h3 class="card-title">Hi, I'm Snow!</h3>
-                        <p class="card-text text-start">Snow was born with a heredity condition that caused a deformity, and the man trying to sell him outside of a grocery store simply left him there when nobody wanted him. Luckily, a kind lady brought him to the shelter. </p>
-                        <a href="#" class="btn btn-outline-primary align-content-center fs-5 fw-semibold mt-auto">Adopt Me</a>
-                    </div>
-                </div>
-                <div class="card border shadow col-lg-3 col-sm mb-3">
-                    <img src="/img/micoy.jpg" class="card-img-top" alt="...">
-                    <div class="card-body d-flex flex-column">
-                        <h3 class="card-title">Hi, I'm Micoy!</h3>
-                        <p class="card-text text-start">Whitey was stray dog before covered in fleas, his hair was almost completely gone and was full of crusty skin. The amazing people in Paw Project loved him back to health for two months before he was even put on the adoption floor.</p>
-                        <a href="#" class="btn btn-outline-primary align-content-center fs-5 fw-semibold mt-auto">Adopt Me</a>
-                    </div>
-                </div>
-                <div class="card border shadow col-lg-3 col-sm mb-3">
-                    <img src="/img/oreo.jpg" class="card-img-top" alt="...">
-                    <div class="card-body d-flex flex-column">
-                        <h3 class="card-title">Hi, I'm Oreo!</h3>
-                        <p class="card-text text-start">Browny was born with a heredity condition that caused a deformity, and the man trying to sell him outside of a grocery store simply left him there when nobody wanted him. Luckily, a kind lady brought him to the shelter. </p>
-                        <a href="#" class="btn btn-primary disabled align-content-center fs-5 fw-semibold mt-auto">Adopted </a>
-                    </div>
-                </div>
-            </div>
-            <div class="mt-3 text-center">
-                <a class="fs-4 text-decoration-none" href="adopt.html">Show more <i class="bi bi-arrow-right-circle "></i>
-                </a>
-            </div>
-        </div>
-    </section> -->
     <!-- Image Gallery -->
     <section class="p-5">
         <h1 class="text-center text-dark fw-bold mb-5"> Meet Our Rescued Paw Friends in Our Shelter!</h1>
