--- a/adopt.html
+++ b/adopt.html
@@ -156,7 +156,7 @@
                     <div class="card-body d-flex flex-column">
                         <h3 class="card-title">Hi, I'm Cleo</h3>
                         <p class="card-text text-start">Cleo was found in a parking lot when she was only 10 weeks old with both her hind legs crushed. She had to wear an external fixture for about two months until her bones grew back together.</p>
-                        <a href="signin.html" class="btn btn-outline-primary align-content-center fs-5 fw-semibold mt-auto">Adopt</a>
+                        <a href="signin.html" class="btn btn-outline-primary align-content-center fs-5 fw-semibold mt-auto">Adopt Me</a>
                     </div>
                 </div>
             </div>
