--- a/adopt.html
+++ b/adopt.html
@@ -82,7 +82,7 @@
                     <div class="card-body d-flex flex-column">
                         <h3 class="card-title">Hi, I'm Teddy!</h3>
                         <p class="card-text text-start">When she was first found, she was anemic from fleas and had patches of fur missing from her body. Now she’s gorgeous and happy as can be! </p>
-                        <a href="signin.html" class="btn btn-primary align-content-center fs-5 fw-semibold mt-auto disabled">Adopt Me</a>
+                        <a href="signin.html" class="btn btn-primary align-content-center fs-5 fw-semibold mt-auto disabled">Adopted</a>
                     </div>
                 </div>
                 <div class="card border shadow col-lg-3 col-sm mb-3">
