--- a/donate.html
+++ b/donate.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="/css/bootstrap.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>Paw Project</title>
 </head>
 <body>
@@ -60,15 +63,15 @@
     <section class="p-5">
         <div class="container">
             <div class="d-md-block d-lg-flex justify-content-evenly text-center">
-                <div class="mt-lg-0 mb-sm-3">
+                <div class="mt-lg-0 mb-sm-3 animate__animated animate__bounceIn">
                     <p class=""><span><img class="w-50" src="img/gcash.png"/></span></p>
                     <button type="button" class="btn btn-primary btn-lg mt-1">DONATE VIA GCASH</button>
                 </div>
-                <div class="mt-lg-3 mb-sm-3">
+                <div class="mt-lg-3 mb-sm-3 animate__animated animate__bounceIn">
                     <p class=""><span><img class="w-25" src="img/bank.png"/></span></p>
                     <button type="button" class="btn btn-danger btn-lg mt-1">DONATE VIA BANK TRANSFER</button>
                 </div>
-                <div>
+                <div class="animate__animated animate__bounceIn">
                     <p class="mt-lg-4 mb-sm-3 "><span><img class="w-25" src="img/paypal1.png"/></span></p>
                     <button type="button" class="btn btn-warning text-light btn-lg mt-3">DONATE VIA PAYPAL</button>
                 </div>
