--- a/adopt.html
+++ b/adopt.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="/css/bootstrap.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <title>Paw Project</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <title> Paw Project</title>
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -51,7 +52,7 @@
             <h3 class="fw-light mt-3">Paw project badly needs adopters! Our shelters are so full that we have to turn down many rescues. When you adopt, you don't just transform one life. You also open up space at the shelter for more strays in need. Please, consider welcoming a baby into your family. You will surely be blessed with love!</h3>
             <h1 class="text-center font-black fw-bold mt-5"><span><img class="color" src="https://img.icons8.com/ios-filled/50/1A1A1A/dog-footprint.png"/></span> Dog's World </h1>
             <div class="d-lg-flex d-md-flex d-sm-block justify-content-evenly gap-4 mt-5 text-center">
-                <div class="card border shadow col-lg-3 col-sm mb-3">
+                <div class="card border shadow col-lg-3 col-sm mb-3" data-aos="zoom-in">
                     <img src="/img/browny.jpg" class="card-img-top" alt="...">
                     <div class="card-body d-flex flex-column">
                         <h3 class="card-title">Hi, I'm Browny!</h3>
@@ -59,7 +60,7 @@
                         <a href="signin.html" class="btn btn-outline-primary align-content-center fs-5 fw-semibold mt-auto">Adopt Me</a>
                     </div>
                 </div>
-                <div class="card border shadow col-lg-3 col-sm mb-3">
+                <div class="card border shadow col-lg-3 col-sm mb-3" data-aos="zoom-in">
                     <img src="/img/Tiago.jpg" class="card-img-top" alt="...">
                     <div class="card-body d-flex flex-column">
                         <h3 class="card-title">Hi, I'm Tiago!</h3>
@@ -67,7 +68,7 @@
                         <a href="signin.html" class="btn btn-outline-primary align-content-center fs-5 fw-semibold mt-auto">Adopt Me</a>
                     </div>
                 </div>
-                <div class="card border shadow col-lg-3 col-sm mb-3">
+                <div class="card border shadow col-lg-3 col-sm mb-3" data-aos="zoom-in">
                     <img src="/img/bruno.jpg" class="card-img-top" alt="...">
                     <div class="card-body d-flex flex-column">
                         <h3 class="card-title">Hi, I'm Bruno!</h3>
@@ -77,15 +78,15 @@
                 </div>
             </div>
             <div class="d-lg-flex d-md-flex d-sm-block justify-content-evenly gap-4 mt-lg-3 mt-sm-5 text-center">
-                <div class="card border shadow col-lg-3 col-sm mb-3">
+                <div class="card border shadow col-lg-3 col-sm mb-3" data-aos="zoom-in">
                     <img src="/img/teddy.jpg" class="card-img-top" alt="...">
                     <div class="card-body d-flex flex-column">
                         <h3 class="card-title">Hi, I'm Teddy!</h3>
                         <p class="card-text text-start">When she was first found, she was anemic from fleas and had patches of fur missing from her body. Now she’s gorgeous and happy as can be! </p>
-                        <a href="signin.html" class="btn btn-primary align-content-center fs-5 fw-semibold mt-auto disabled">Adopted</a>
+                        <a href="signin.html" class="btn btn-primary align-content-center fs-5 fw-semibold mt-auto disabled">Adopt Me</a>
                     </div>
                 </div>
-                <div class="card border shadow col-lg-3 col-sm mb-3">
+                <div class="card border shadow col-lg-3 col-sm mb-3" data-aos="zoom-in">
                     <img src="/img/chalie.jpg" class="card-img-top" alt="...">
                     <div class="card-body d-flex flex-column">
                         <h3 class="card-title">Hi, I'm Charlie!</h3>
@@ -93,7 +94,7 @@
                         <a href="signin.html" class="btn btn-outline-primary align-content-center fs-5 fw-semibold mt-auto">Adopt Me</a>
                     </div>
                 </div>
-                <div class="card border shadow col-lg-3 col-sm mb-3">
+                <div class="card border shadow col-lg-3 col-sm mb-3" data-aos="zoom-in">
                     <img src="/img/Milo.jpg" class="card-img-top" alt="...">
                     <div class="card-body d-flex flex-column">
                         <h3 class="card-title">Hi, I'm Milo!</h3>
@@ -109,7 +110,7 @@
         <div class="container">
             <h1 class="text-center font-black fw-bold"><span><img src="https://img.icons8.com/ios-filled/50/000000/cat-footprint.png"/></span> Cat's World </h1>
             <div class="d-lg-flex d-md-flex d-sm-block justify-content-evenly gap-4 mt-5 text-center">
-                <div class="card border shadow col-lg-3 col-sm mb-3">
+                <div class="card border shadow col-lg-3 col-sm mb-3" data-aos="zoom-in">
                     <img src="/img/snow.jpg" class="card-img-top" alt="...">
                     <div class="card-body d-flex flex-column">
                         <h3 class="card-title">Hi, I'm Snow!</h3>
@@ -117,7 +118,7 @@
                         <a href="signin.html" class="btn btn-outline-primary align-content-center fs-5 fw-semibold mt-auto">Adopt Me</a>
                     </div>
                 </div>
-                <div class="card border shadow col-lg-3 col-sm mb-3">
+                <div class="card border shadow col-lg-3 col-sm mb-3" data-aos="zoom-in">
                     <img src="/img/micoy.jpg" class="card-img-top" alt="...">
                     <div class="card-body d-flex flex-column">
                         <h3 class="card-title">Hi, I'm Kitty!</h3>
@@ -125,7 +126,7 @@
                         <a href="signin.html" class="btn btn-outline-primary align-content-center fs-5 fw-semibold mt-auto">Adopt Me</a>
                     </div>
                 </div>
-                <div class="card border shadow col-lg-3 col-sm mb-3">
+                <div class="card border shadow col-lg-3 col-sm mb-3" data-aos="zoom-in">
                     <img src="/img/oreo.webp" class="card-img-top" alt="...">
                     <div class="card-body d-flex flex-column">
                         <h3 class="card-title">Hi, I'm Oreo!</h3>
@@ -135,7 +136,7 @@
                 </div>
             </div> 
             <div class="d-lg-flex d-md-flex d-sm-block justify-content-evenly gap-4 mt-md-3 mt-sm-0 text-center">
-                <div class="card border shadow col-lg-3 col-sm mb-3">
+                <div class="card border shadow col-lg-3 col-sm mb-3" data-aos="zoom-in">
                     <img src="/img/rory.jpg" class="card-img-top" alt="...">
                     <div class="card-body d-flex flex-column">
                         <h3 class="card-title">Hi, I'm Rory!</h3>
@@ -143,7 +144,7 @@
                         <a href="signin.html" class="btn btn-outline-primary align-content-center fs-5 fw-semibold mt-auto">Adopt Me</a>
                     </div>
                 </div>
-                <div class="card border shadow col-lg-3 col-sm mb-3">
+                <div class="card border shadow col-lg-3 col-sm mb-3" data-aos="zoom-in">
                     <img src="/img/garfield.jpg" class="card-img-top" alt="...">
                     <div class="card-body d-flex flex-column">
                         <h3 class="card-title">Hi, I'm Garfield!</h3>
@@ -151,7 +152,7 @@
                         <a href="signin.html" class="btn btn-outline-primary align-content-center fs-5 fw-semibold mt-auto">Adopt Me</a>
                     </div>
                 </div>
-                <div class="card border shadow col-lg-3 col-sm mb-3">
+                <div class="card border shadow col-lg-3 col-sm mb-3" data-aos="zoom-in">
                     <img src="/img/dark.jpg" class="card-img-top" alt="...">
                     <div class="card-body d-flex flex-column">
                         <h3 class="card-title">Hi, I'm Cleo</h3>
@@ -172,6 +173,10 @@
     </div>
     </footer>
     <script src="//code.tidio.co/utpwc0zyfszyo6fdqovfpkqgkqxwflua.js" async></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 <script src="/js/bootstrap.min.js"></script>
 </html>
