--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/css/bootstrap.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title> Paw Project</title>
 </head>
 <body>
@@ -87,10 +88,11 @@
     <section class="p-5" id="services">
         <div class="container">
             <h1 class="text-center text-dark fw-bold"> What We Do?</h1>
-            <div class="d-md-flex d-sm-block mt-5">
+            <div class="d-md-flex d-sm-block mt-5" data-aos="fade-right" data-aos-offset="300"
+            data-aos-easing="ease-in-sine"  data-aos-delay="200">
                 <div class="col">
                     <img class="image-fluid w-100 rounded shadow " src="/img/rescue.webp" alt="">
-                </div>
+                </div>  
                 <div class="col mx-lg-5 mx-md-5 mx-sm-0">
                     <p class="fw-bold fs-2 pt-md-0 pt-sm-4 text-primary">Rescue</p>
                     <p class="fw-normal fs-4 ">
@@ -98,7 +100,8 @@
                     </p>
                 </div>
             </div>
-            <div class="d-md-flex d-sm-block mt-5">
+            <div class="d-md-flex d-sm-block mt-5"data-aos="fade-left" data-aos-offset="300"
+            data-aos-easing="ease-in-sine" data-aos-delay="300">
                 <div class="col order-last mx-lg-5 mx-md-5 mx-sm-0">
                     <img class="image-fluid w-100 rounded shadow " src="/img/vaccine2.jpg" alt="">
                 </div>
@@ -109,7 +112,8 @@
                     </p>
                 </div>
             </div>
-            <div class="d-md-flex d-sm-block mt-5">
+            <div class="d-md-flex d-sm-block mt-5" data-aos="fade-right" data-aos-offset="300"
+            data-aos-easing="ease-in-sine" data-aos-delay="300">
                 <div class="col">
                     <img class="image-fluid w-100 rounded shadow " src="/img/shelter.jpg" alt="">
                 </div>
@@ -120,7 +124,8 @@
                     </p>
                 </div>
             </div>
-            <div class="d-md-flex d-sm-block mt-5">
+            <div class="d-md-flex d-sm-block mt-5" data-aos="fade-left" data-aos-offset="300"
+            data-aos-easing="ease-in-sine" data-aos-delay="300">
                 <div class="col order-last mx-lg-5 mx-md-5 mx-sm-0">
                     <img class="image-fluid w-100 rounded shadow " src="/img/adoptme2.webp" alt="">
                 </div>
@@ -131,7 +136,8 @@
                     </p>
                 </div>
             </div>
-            <div class="d-md-flex d-sm-block mt-5">
+            <div class="d-md-flex d-sm-block mt-5" data-aos="fade-right" data-aos-offset="300"
+            data-aos-easing="ease-in-sine" data-aos-delay="300">
                 <div class="col">
                     <img class="image-fluid w-100 rounded shadow " src="/img/spay.jpg" alt="">
                 </div>
@@ -148,7 +154,10 @@
     <section class="p-5">
         <h1 class="text-center text-dark fw-bold mb-5"> Meet Our Rescued Paw Friends in Our Shelter!</h1>
         <div class="container">
-            <div id="carouselExampleCaptions" class="carousel slide carousel-dark shadow" data-bs-ride="false">
+            <div id="carouselExampleCaptions" class="carousel slide carousel-dark shadow" data-bs-ride="false" data-aos="fade-zoom-in"
+            data-aos-easing="ease-in-back"
+            data-aos-delay="400"
+            data-aos-offset="0">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -236,6 +245,10 @@
     </div>
     </footer>
     <script src="//code.tidio.co/utpwc0zyfszyo6fdqovfpkqgkqxwflua.js" async></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 <script src="/js/bootstrap.min.js"></script>
 </html>
